<resources>
    <string name="app_name">Borch Intelligence</string>


    <string name="pleaseChosesproduct">请选择塑料制品参数</string>

    <string name="pleaseChosesmodule">请选择模具参数</string>

    <string name="pleaseChosesothers">其他参数(选填)</string>
    <string name="area">投影面积(c㎡)</string>
    <string name="machine_List">注塑机列表</string>

    <string name="parameter_default1">请选择</string>
    <string name="parameter_productType">类型</string>
    <string name="parameter_material">原料</string>
    <string name="parameter_crumble">回收/破碎料</string>
    <string name="parameter_CaCo3">CaCo3</string>
    <string name="parameter_fiberglass">玻纤</string>
    <string name="parameter_fireproofing">防火/助燃</string>
    <string name="parameter_color">颜色</string>
    <string name="parameter_productWeight">重量(g)</string>
    <string name="parameter_wallThickness">壁厚(mm)</string>
    <string name="parameter_productSize">制品尺寸</string>
    <string name="parameter_productLength">长(mm)</string>
    <string name="parameter_productWidth">宽(mm)</string>
    <string name="parameter_productHeight">高(mm)</string>
    <string name="next">下一步</string>
    <string name="finish">完成</string>
    <string name="standard">标准尺寸</string>
    <string name="pleaseFillin">请填写</string>
    <string name="pleaseChoese">请选择</string>
    <string name="buyGuide">购机向导</string>


    <string name="Size">尺寸</string>
    <string name="dingchuWay">顶出方式</string>
    <string name="dingChu">顶出</string>
    <string name="laShen">拉伸</string>
    <string name="dingWeihuan">定位环</string>
    <string name="nonStandard">非标准尺寸</string>

    <string name="screwType">螺杆类型</string>
    <string name="A_level">A级</string>
    <string name="B_level">B级</string>
    <string name="C_level">C级</string>
    <string name="motionType">动力类型</string>
    <string name="youya">油压</string>
    <string name="yeya">液压</string>
    <string name="quandian">全电</string>
    <string name="youdianhunhe">油电混合</string>

    <string-array name="spinnername">

        <item>电子电器零件</item>
        <item>建筑材料 </item>
        <item>医疗器械</item>
        <item>家用五金</item>
        <item>食用器皿</item>
        <item>交通器材</item>
        <item>运动器材</item>
        <item>文具用品</item>
        <item>照明设备</item>
        <item>家电产品</item>
        <item>包装材料</item>
        <item>办公器具</item>
        <item>光学用品</item>
    </string-array>
</resources>
