<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/boss"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_default">




    <RelativeLayout
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x43"
        android:background="@color/colorBackground"
        >


        <Button
            android:id="@+id/back"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x21"
            android:layout_width="@dimen/x10"
            android:layout_height="@dimen/y13"
            android:background="@drawable/back"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/buyGuide"
            android:textSize="@dimen/x22"
            android:textColor="@color/color_default"/>



    </RelativeLayout>


    <ImageView
        android:id="@+id/process1"
        android:layout_below="@+id/title1"
        android:layout_marginTop="@dimen/y10"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/step2"/>


    <TextView
        android:id="@+id/title2"
        android:layout_below="@+id/process1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y10"
        android:layout_centerHorizontal="true"
        android:text="@string/pleaseChosesmodule"
        android:textSize="@dimen/x16"
        android:textColor="@color/colorTab_selected"/>



    <RelativeLayout
        android:id="@+id/line"
        android:layout_below="@+id/title2"
        android:layout_marginTop="@dimen/y10"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorline"
        >
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/choese10"
        android:layout_below="@+id/line"
        android:layout_marginTop="@dimen/y11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <TextView
            android:id="@+id/Size"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/x21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Size"
            android:textSize="@dimen/x14"
            android:textColor="@color/colorparameter1"/>

    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/choese11"
        android:layout_below="@+id/choese10"
        android:layout_marginTop="@dimen/y7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parameter_productLength"
            android:textSize="@dimen/x14"
            android:textColor="@color/colorparameter3"/>



        <EditText
            android:id="@+id/editText3"
            android:layout_centerVertical="true"
            android:background="@null"
            android:layout_marginLeft="@dimen/x116"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pleaseFillin"
            android:phoneNumber="true"
            android:textSize="@dimen/x14"
            android:textColor="@color/colorparameter2"/>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/choese12"
        android:layout_below="@+id/choese11"
        android:layout_marginTop="@dimen/y7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parameter_productWidth"
            android:textSize="@dimen/x14"
            android:textColor="@color/colorparameter3"/>



        <EditText
            android:id="@+id/editText4"
            android:layout_centerVertical="true"
            android:background="@null"
            android:layout_marginLeft="@dimen/x116"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pleaseFillin"
            android:phoneNumber="true"
            android:textSize="@dimen/x14"
            android:textColor="@color/colorparameter2"/>


    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/choese13"
        android:layout_below="@+id/choese12"
        android:layout_marginTop="@dimen/y7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parameter_productHeight"
            android:textSize="@dimen/x14"
            android:textColor="@color/colorparameter3"/>



        <EditText
            android:id="@+id/editText5"
            android:layout_centerVertical="true"
            android:background="@null"
            android:phoneNumber="true"
            android:layout_marginLeft="@dimen/x116"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pleaseFillin"
            android:textSize="@dimen/x14"
            android:textColor="@color/colorparameter2"/>


    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/line2"
        android:layout_below="@+id/choese13"
        android:layout_marginTop="@dimen/y11"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorline"
        >
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/choese14"
        android:layout_below="@+id/line2"
        android:layout_marginTop="@dimen/y11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <TextView
            android:id="@+id/Size1"
            android:layout_marginLeft="@dimen/x21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dingchuWay"
            android:textSize="@dimen/x14"
            android:textColor="@color/colorparameter1"/>


        <RadioGroup
            android:id="@+id/radiogroup1"
            android:layout_marginLeft="@dimen/x21"
            android:layout_below="@+id/Size1"
            android:layout_marginTop="@dimen/y7"
            android:layout_width="@dimen/x185"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >


            <RadioButton
                android:button="@null"
                android:id="@+id/radiobutton1"
                android:layout_width="@dimen/x80"
                android:layout_height="@dimen/y25"
                android:gravity="center"
                android:checked="true"
                android:text="@string/dingChu"
                android:textColor="@color/moduletextcolor_selector"
                android:background="@drawable/module_way"
                />

            <RadioButton
                android:id="@+id/radiobutton2"
                android:button="@null"
                android:layout_width="@dimen/x80"
                android:layout_height="@dimen/y25"
                android:layout_marginLeft="@dimen/x25"
                android:gravity="center"
                android:text="@string/laShen"
                android:textColor="@color/moduletextcolor_selector"
                android:background="@drawable/module_way"
                />

        </RadioGroup>

        <RelativeLayout
            android:id="@+id/line4"
            android:layout_below="@+id/radiogroup1"
            android:layout_marginTop="@dimen/y11"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorline"
            >
        </RelativeLayout>


    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/choese15"
        android:layout_below="@+id/choese14"
        android:layout_marginTop="@dimen/y11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <TextView
            android:id="@+id/Size2"
            android:layout_marginLeft="@dimen/x21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dingWeihuan"
            android:textSize="@dimen/x14"
            android:textColor="@color/colorparameter1"/>


        <RadioGroup
            android:id="@+id/radiogroup2"
            android:layout_marginLeft="@dimen/x21"
            android:layout_below="@+id/Size2"
            android:layout_marginTop="@dimen/y7"
            android:layout_width="@dimen/x185"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >


            <RadioButton
                android:button="@null"
                android:id="@+id/radiobutton3"
                android:layout_width="@dimen/x80"
                android:layout_height="@dimen/y25"
                android:gravity="center"
                android:text="@string/standard"
                android:checked="true"
                android:textColor="@color/moduletextcolor_selector"
                android:background="@drawable/module_way"
                />

            <RadioButton
                android:id="@+id/radiobutton4"
                android:button="@null"
                android:layout_width="@dimen/x80"
                android:layout_height="@dimen/y25"
                android:layout_marginLeft="@dimen/x25"
                android:gravity="center"
                android:text="@string/nonStandard"
                android:textColor="@color/moduletextcolor_selector"
                android:background="@drawable/module_way"
                />

        </RadioGroup>

        <EditText
            android:id="@+id/editText6"
            android:layout_width="@dimen/x71"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/radiogroup2"
            android:layout_marginLeft="@dimen/x14"
            android:layout_marginTop="@dimen/y18"
            android:hint="@string/pleaseFillin"
            android:phoneNumber="true"
            />

        <TextView
            android:id="@+id/text_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/editText6"
            android:layout_alignBottom="@+id/editText6"
            android:text="mm"
            android:textColor="@color/colorparameter1"
            />

        <RelativeLayout
            android:id="@+id/line3"
            android:layout_below="@+id/radiogroup2"
            android:layout_marginTop="@dimen/y11"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorline"
            >
        </RelativeLayout>


    </RelativeLayout>





    <Button
        android:id="@+id/btn_next2"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/y12"
        android:layout_width="@dimen/x277"
        android:layout_height="@dimen/y25"
        android:text="@string/next"
        android:textSize="@dimen/x14"
        android:textColor="@color/color_default"
        android:background="@drawable/next2_btn"/>





</RelativeLayout>