<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_default">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x43"
        android:background="@color/colorBackground"
    >
        <RelativeLayout
            android:id="@+id/layout_back"
            android:layout_alignParentLeft="true"
            android:layout_width="@dimen/x43"
            android:layout_height="@dimen/x43"
            android:background="@drawable/back_btn">

        <Button
            android:id="@+id/back"
            android:layout_centerInParent="true"
            android:layout_width="@dimen/x10"
            android:layout_height="@dimen/y13"
            android:background="@drawable/back"
            android:clickable="false"
            android:focusable="false"
            />
        </RelativeLayout>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/buyGuide"
        android:textSize="@dimen/x22"
        android:textColor="@color/color_default"/>

    </RelativeLayout>


    <ImageView
        android:id="@+id/process1"
        android:layout_below="@+id/top_bar"
        android:layout_marginTop="@dimen/y10"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/step1"/>


    <TextView
        android:id="@+id/title"
        android:layout_below="@+id/process1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y10"
        android:layout_centerHorizontal="true"
        android:text="@string/pleaseChosesproduct"
        android:textSize="@dimen/x16"
        android:textColor="@color/colorTab_selected"/>




    <RelativeLayout
        android:id="@+id/line1"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/y10"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorline"
        >
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/choese_type"
        android:layout_below="@+id/line1"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="@dimen/y31"
        android:background="@drawable/layout_style"
        >
        <TextView

            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parameter_productType"
            android:textSize="@dimen/x14"
            android:textColor="@color/colorparameter1"/>

        <TextView
            android:id="@+id/type"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x116"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pleaseChoese"
            android:textSize="@dimen/x14"
            android:textColor="@color/colorparameter2"/>

    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/line2"
        android:layout_below="@+id/choese_type"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorline"
        >
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/choese_material"
        android:layout_below="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y31"
        android:background="@drawable/layout_style">

        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parameter_material"
            android:textSize="@dimen/x14"
            android:textColor="@color/colorparameter1"/>

        <TextView
            android:id="@+id/material"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x116"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pleaseChoese"
            android:textSize="@dimen/x14"
            android:textColor="@color/colorparameter2"/>

    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/line3"
        android:layout_below="@+id/choese_material"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorline"
        >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/choese_weight"
        android:layout_below="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y31"
        android:focusable="true"
        android:background="@drawable/layout_style"
        android:focusableInTouchMode="true"
        >

        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parameter_productWeight"
            android:textSize="@dimen/x14"
            android:textColor="@color/colorparameter1"/>



        <EditText
            android:id="@+id/editText_weight"
            android:background="@null"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x116"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pleaseFillin"
            android:phoneNumber="true"
            android:textSize="@dimen/x14"
            android:textColor="@color/colorparameter2"/>

    </RelativeLayout>





    <RelativeLayout
        android:id="@+id/line4"
        android:layout_below="@+id/choese_weight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorline"
        >
    </RelativeLayout>

    <Button
            android:id="@+id/btn_next1"
            android:layout_width="@dimen/x277"
            android:layout_height="@dimen/y25"
            android:text="@string/next"
            android:textSize="@dimen/x14"
            android:textColor="@color/btn_next_selector"
            android:layout_below="@+id/line4"
        android:layout_marginTop="@dimen/y15"
            android:layout_centerHorizontal="true"
            android:background="@drawable/next1_btn"/>


</RelativeLayout>




